// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`org/org-to-hast blockquote 1`] = `

<blockquote>
  <p>hello, world!</p>
</blockquote>

`;

exports[`org/org-to-hast center block 1`] = `

<div class="center">
  <p>hello</p>
</div>

`;

exports[`org/org-to-hast clock 1`] = ``;

exports[`org/org-to-hast comment block 1`] = ``;

exports[`org/org-to-hast comments 1`] = `

<p>hello</p>
<p>there</p>

`;

exports[`org/org-to-hast complex headline 1`] = `

<h1><span class="todo-keyword TODO">TODO</span> <span class="priority priority-A">[A]</span> headline <em>italic</em> title   <span class="tags"><span class="tag tag-some">some</span> <span class="tag tag-tags">tags</span></span></h1>

`;

exports[`org/org-to-hast custom drawer 1`] = ``;

exports[`org/org-to-hast description list 1`] = `

<dl>
  <dt>term1</dt>
  <dd>
    <p>description 1</p>
  </dd>
  <dt>term 2</dt>
  <dd>
    <p>description 2</p>
  </dd>
</dl>

`;

exports[`org/org-to-hast description list with complex tags 1`] = `

<dl>
  <dt><a href="https://example.com">Example</a></dt>
  <dd>
    <p>Hello there!</p>
  </dd>
  <dt><a href="https://github.com">GitHub</a></dt>
  <dd>
    <p>This is GitHub, your hub for Git repos.</p>
  </dd>
  <dt><strong>Gitlab</strong></dt>
  <dd>
    <p>Alternative to GitHub</p>
  </dd>
  <dt><em>Sourcehut</em></dt>
  <dd>
    <p>Another alternative to GitHub that primarily uses email-based workflows.</p>
  </dd>
  <dt><em>Codeberg</em></dt>
  <dd>
    <p><strong>ANOTHER ALTERNATIVE</strong></p>
  </dd>
  <dt><em><strong>self-hosting Git server</strong></em></dt>
  <dd>
    <p><em><strong>The ultimate Git solution for privacy-oriented individuals!</strong></em></p>
  </dd>
</dl>

`;

exports[`org/org-to-hast diary sexp 1`] = ``;

exports[`org/org-to-hast do not double-escape urls 1`] = `

<p><a href="http://localhost:3000/path%2Bwith%2Bpercents">path with percents</a></p>

`;

exports[`org/org-to-hast does not export :noexport: headline 1`] = `

<h1>hello</h1>
<p>some text</p>

`;

exports[`org/org-to-hast emphasis 1`] = `

<p><em>Consider</em> <code class="inline-code">t*h*e</code> <strong>following</strong> <code class="inline-verbatim">example</code> <del>strike</del> <span class="underline" style="text-decoration: underline;">under</span></p>

`;

exports[`org/org-to-hast empty 1`] = ``;

exports[`org/org-to-hast entity 1`] = `

<p>À</p>

`;

exports[`org/org-to-hast escape local link 1`] = `

<p><a href="./path%20with%20%22spaces%22.org">path with "spaces"</a></p>

`;

exports[`org/org-to-hast escape local link with percent 1`] = `

<p><a href="file:local%252Bpath%252Bwith%252Bpercents.org">local path with percents</a></p>

`;

exports[`org/org-to-hast example block 1`] = `

<div class="exampe">example</div>

`;

exports[`org/org-to-hast export block 1`] = ``;

exports[`org/org-to-hast export html block 1`] = `<abbr title="World Health Organization">WHO</abbr> was founded in 1948.`;

exports[`org/org-to-hast export html keyword 1`] = `

<p>hello</p>
<h1>html tag</h1>

`;

exports[`org/org-to-hast fixed-width 1`] = `

<pre class="fixed-width">hello</pre>

`;

exports[`org/org-to-hast headline 1`] = `

<h1>hi</h1>

`;

exports[`org/org-to-hast headline with sections 1`] = `

<p>hello</p>
<h1>hi</h1>
<p>section</p>
<h2>hello</h2>
<p>another section</p>

`;

exports[`org/org-to-hast horizontal rule 1`] = `

<hr>

`;

exports[`org/org-to-hast html5 fancy block 1`] = `

<aside>
  <p>hello</p>
</aside>

`;

exports[`org/org-to-hast images 1`] = `

<p>
  <img src="./image.png">
</p>

`;

exports[`org/org-to-hast keywords 1`] = ``;

exports[`org/org-to-hast latex environment 1`] = `

<div class="math math-display">
  \\begin{hello}
  some text
  \\end{hello}
</div>

`;

exports[`org/org-to-hast latex-fragment 1`] = `

<p>
  If <span class="math math-inline">a^2=b</span> and <span class="math math-inline">b=2</span>, then the solution must be
  either <span class="math math-inline">a=+\\sqrt{2}</span> or <span class="math math-inline">a=-\\sqrt{2}</span>.
</p>

`;

exports[`org/org-to-hast link 1`] = `

<p><a href="https://example.com">https://example.com</a></p>

`;

exports[`org/org-to-hast link mixed with text 1`] = `

<p>hello <a href="http://example.com">http://example.com</a> blah</p>

`;

exports[`org/org-to-hast list 1`] = `

<ul>
  <li>
    <p>hello</p>
  </li>
</ul>

`;

exports[`org/org-to-hast multiple headlines 1`] = `

<h1>hi</h1>
<h2>there</h2>
<h1>hello</h1>
<h3>world</h3>

`;

exports[`org/org-to-hast nested list 1`] = `

<ul>
  <li>
    <p>hello</p>
    <ul>
      <li>
        <p>world</p>
      </li>
      <li>
        <p>blah</p>
      </li>
    </ul>
  </li>
  <li>
    <p>hi</p>
  </li>
</ul>

`;

exports[`org/org-to-hast ordered list 1`] = `

<ol>
  <li>
    <p>one</p>
  </li>
</ol>

`;

exports[`org/org-to-hast paragraph 1`] = `

<p>hello</p>

`;

exports[`org/org-to-hast planning 1`] = `

<h1>headline</h1>

`;

exports[`org/org-to-hast property drawer 1`] = `

<h1>headline</h1>

`;

exports[`org/org-to-hast remove common src block offset 1`] = `

<pre class="src-block"><code>hello
  world
</code></pre>

`;

exports[`org/org-to-hast special block 1`] = `

<div class="special-block block-blah">
  <p>hello</p>
</div>

`;

exports[`org/org-to-hast src block 1`] = `

<pre class="src-block"><code class="language-c">*a = b;
printf("%d\\n", *a);
</code></pre>

`;

exports[`org/org-to-hast subscript 1`] = `

<p>hello<sub>there</sub></p>

`;

exports[`org/org-to-hast superscript 1`] = `

<p>hello<sup>there</sup></p>

`;

exports[`org/org-to-hast table 1`] = `

<table>
  <thead>
    <tr>
      <th>head1</th>
      <th>head2</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>value1</td>
      <td>value2</td>
    </tr>
  </tbody>
</table>

`;

exports[`org/org-to-hast table without header 1`] = `

<table>
  <tbody>
    <tr>
      <td>value1</td>
      <td>value2</td>
    </tr>
    <tr>
      <td>value3</td>
      <td>value4</td>
    </tr>
  </tbody>
</table>

`;

exports[`org/org-to-hast table, multiple body 1`] = `

<table>
  <thead>
    <tr>
      <th>head1</th>
      <th>head2</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>value1</td>
      <td>value2</td>
    </tr>
    <tr>
      <td>value3</td>
      <td>value4</td>
    </tr>
  </tbody>
  <tbody>
    <tr>
      <td>value5</td>
      <td>value6</td>
    </tr>
  </tbody>
</table>

`;

exports[`org/org-to-hast table.el table 1`] = `

<pre class="table-el">+------+
| blah |
+------+
</pre>

`;

exports[`org/org-to-hast timestamps active 1`] = `

<p><span class="timestamp">&#x3C;2021-01-07 Thu></span></p>

`;

exports[`org/org-to-hast timestamps active-range 1`] = `

<p><span class="timestamp">&#x3C;2021-01-07 Thu>--&#x3C;2021-01-09 Sat></span></p>

`;

exports[`org/org-to-hast timestamps inactive 1`] = `

<p><span class="timestamp">[2021-01-07 Thu]</span></p>

`;

exports[`org/org-to-hast timestamps inactive-range 1`] = `

<p><span class="timestamp">[2021-01-07 Thu]--[2021-01-08 Fri]</span></p>

`;

exports[`org/org-to-hast timestamps time range 1`] = `

<p><span class="timestamp">[2021-01-07 Thu 19:36-20:38]</span></p>

`;

exports[`org/org-to-hast timestamps with time 1`] = `

<p><span class="timestamp">[2021-01-07 Thu 19:36]</span></p>

`;

exports[`org/org-to-hast useSections 1`] = `

<p>hello</p>
<section class="section-level-1">
  <h1>headline 1</h1>
  <p>text</p>
  <section class="section-level-2">
    <h2>headline 1.1</h2>
    <p>more text</p>
  </section>
</section>
<section class="section-level-1">
  <h1>headline 2</h1>
</section>

`;

exports[`org/org-to-hast verse block 1`] = `

<pre class="verse"> Great clouds overhead
 Tiny black birds rise and fall
 Snow covers Emacs

    ---AlexSchroeder
</pre>

`;
